# conductor

./: .gitignore  CLAUDE.md  LICENSE  README.md  conductor.py  conductor_mcp.py  conftest.py  pyproject.toml  test_cli.py  test_data_structures.py  test_e2e_smoke.py  test_fsm.py  test_inbox_ack.py  test_inbox_append.py  test_inbox_parsers.py  test_inbox_read.py  test_locking.py  test_mcp.py  test_proposal_create.py  test_proposal_edit_body.py  test_proposal_parsers.py  test_proposal_read.py  test_proposal_set_status.py  test_state.py
.github/workflows/: test.yml
prompts/: README.md  builder.md  planner.md
scripts/: demo.cast  demo.sh
